add project sp patch

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3 Configuration
+# Buildroot 2020.02.3-ge761bac-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -189,10 +189,10 @@ BR2_STRIP_EXCLUDE_FILES=""
 BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_0 is not set
 # BR2_OPTIMIZE_1 is not set
-# BR2_OPTIMIZE_2 is not set
+BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_G is not set
-BR2_OPTIMIZE_S=y
+# BR2_OPTIMIZE_S is not set
 # BR2_OPTIMIZE_FAST is not set
 # BR2_GOOGLE_BREAKPAD_ENABLE is not set
 # BR2_STATIC_LIBS is not set
@@ -246,13 +246,13 @@ BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
 #
 # BR2_KERNEL_HEADERS_4_4 is not set
 # BR2_KERNEL_HEADERS_4_9 is not set
-BR2_KERNEL_HEADERS_4_14=y
-# BR2_KERNEL_HEADERS_4_19 is not set
+# BR2_KERNEL_HEADERS_4_14 is not set
+BR2_KERNEL_HEADERS_4_19=y
 # BR2_KERNEL_HEADERS_5_4 is not set
 # BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_CUSTOM_TARBALL is not set
 # BR2_KERNEL_HEADERS_CUSTOM_GIT is not set
-BR2_DEFAULT_KERNEL_HEADERS="4.14.182"
+BR2_DEFAULT_KERNEL_HEADERS="4.19.125"
 BR2_PACKAGE_LINUX_HEADERS=y
 
 #
@@ -269,6 +269,7 @@ BR2_PACKAGE_HOST_BINUTILS_SUPPORTS_CFI=y
 BR2_BINUTILS_VERSION_2_32_X=y
 # BR2_BINUTILS_VERSION_2_33_X is not set
 BR2_BINUTILS_VERSION="2.32"
+BR2_BINUTILS_ENABLE_LTO=y
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
@@ -282,7 +283,7 @@ BR2_GCC_VERSION="7.5.0"
 BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # BR2_TOOLCHAIN_BUILDROOT_FORTRAN is not set
-# BR2_GCC_ENABLE_LTO is not set
+BR2_GCC_ENABLE_LTO=y
 BR2_GCC_ENABLE_OPENMP=y
 # BR2_GCC_ENABLE_GRAPHITE is not set
 BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
@@ -358,7 +359,12 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_11=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_12=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_13=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_14=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.14"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_15=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_16=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_17=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_18=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_19=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.19"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -1203,8 +1209,8 @@ BR2_PACKAGE_OPENJDK_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON is not set
 BR2_PACKAGE_PYTHON3=y
 # BR2_PACKAGE_PYTHON3_PY_ONLY is not set
-BR2_PACKAGE_PYTHON3_PYC_ONLY=y
-# BR2_PACKAGE_PYTHON3_PY_PYC is not set
+# BR2_PACKAGE_PYTHON3_PYC_ONLY is not set
+BR2_PACKAGE_PYTHON3_PY_PYC=y
 
 #
 # core python3 modules
@@ -1221,7 +1227,7 @@ BR2_PACKAGE_PYTHON3_CURSES=y
 # BR2_PACKAGE_PYTHON3_READLINE is not set
 BR2_PACKAGE_PYTHON3_SSL=y
 BR2_PACKAGE_PYTHON3_UNICODEDATA=y
-# BR2_PACKAGE_PYTHON3_SQLITE is not set
+BR2_PACKAGE_PYTHON3_SQLITE=y
 BR2_PACKAGE_PYTHON3_PYEXPAT=y
 BR2_PACKAGE_PYTHON3_XZ=y
 BR2_PACKAGE_PYTHON3_ZLIB=y
@@ -1567,8 +1573,6 @@ BR2_PACKAGE_PYTHON_PYTZ=y
 # BR2_PACKAGE_PYTHON_ZC_LOCKFILE is not set
 # BR2_PACKAGE_PYTHON_ZEROCONF is not set
 # BR2_PACKAGE_PYTHON_ZOPE_INTERFACE is not set
-# BR2_PACKAGE_PYTHON_PEEWEE is not set
-BR2_PACKAGE_PYTHON_PANDAS=y
 # BR2_PACKAGE_RUBY is not set
 # BR2_PACKAGE_TCL is not set
 
@@ -1710,6 +1714,7 @@ BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # Database
 #
 # BR2_PACKAGE_BERKELEYDB is not set
+# BR2_PACKAGE_CPPDB is not set
 # BR2_PACKAGE_GDBM is not set
 # BR2_PACKAGE_HIREDIS is not set
 # BR2_PACKAGE_KOMPEXSQLITE is not set
@@ -1720,8 +1725,18 @@ BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
 # BR2_PACKAGE_POSTGRESQL is not set
 # BR2_PACKAGE_REDIS is not set
 # BR2_PACKAGE_ROCKSDB is not set
-# BR2_PACKAGE_SQLCIPHER is not set
-# BR2_PACKAGE_SQLITE is not set
+
+#
+# sqlcipher conflicts with sqlite
+#
+BR2_PACKAGE_SQLITE=y
+# BR2_PACKAGE_SQLITE_STAT4 is not set
+# BR2_PACKAGE_SQLITE_ENABLE_COLUMN_METADATA is not set
+# BR2_PACKAGE_SQLITE_ENABLE_FTS3 is not set
+# BR2_PACKAGE_SQLITE_ENABLE_JSON1 is not set
+# BR2_PACKAGE_SQLITE_ENABLE_UNLOCK_NOTIFY is not set
+# BR2_PACKAGE_SQLITE_SECURE_DELETE is not set
+# BR2_PACKAGE_SQLITE_NO_SYNC is not set
 # BR2_PACKAGE_UNIXODBC is not set
 
 #
