--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-ge761bac-dirty Configuration
+# Buildroot 2020.02.3-g051fc82 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2196,7 +2196,8 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBNFNETLINK is not set
 # BR2_PACKAGE_LIBNFTNL is not set
 # BR2_PACKAGE_LIBNICE is not set
-# BR2_PACKAGE_LIBNL is not set
+BR2_PACKAGE_LIBNL=y
+# BR2_PACKAGE_LIBNL_TOOLS is not set
 # BR2_PACKAGE_LIBOAUTH is not set
 # BR2_PACKAGE_LIBOPING is not set
 # BR2_PACKAGE_LIBOSIP2 is not set
@@ -2766,7 +2767,19 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
 # BR2_PACKAGE_WIRESHARK is not set
-# BR2_PACKAGE_WPA_SUPPLICANT is not set
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
+# BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_EAP is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_WPS is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_WPA3 is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_CLI is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_WPA_CLIENT_SO is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DBUS is not set
 # BR2_PACKAGE_WPAN_TOOLS is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
