--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-gc087650-dirty Configuration
+# Buildroot 2020.02.3-g8c20a48-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -1133,11 +1133,11 @@ BR2_PACKAGE_HAS_UDEV=y
 # BR2_PACKAGE_UHUBCTL is not set
 # BR2_PACKAGE_UMTPRD is not set
 # BR2_PACKAGE_UPOWER is not set
-# BR2_PACKAGE_USB_MODESWITCH is not set
-# BR2_PACKAGE_USB_MODESWITCH_DATA is not set
+BR2_PACKAGE_USB_MODESWITCH=y
+BR2_PACKAGE_USB_MODESWITCH_DATA=y
 # BR2_PACKAGE_USBMOUNT is not set
 BR2_PACKAGE_USBUTILS=y
-BR2_PACKAGE_W_SCAN=y
+# BR2_PACKAGE_W_SCAN is not set
 # BR2_PACKAGE_WIPE is not set
 # BR2_PACKAGE_XORRISO is not set
 
@@ -1159,7 +1159,7 @@ BR2_PACKAGE_GAUCHE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GAUCHE is not set
 # BR2_PACKAGE_GUILE is not set
 # BR2_PACKAGE_HASERL is not set
-# BR2_PACKAGE_JIMTCL is not set
+BR2_PACKAGE_JIMTCL=y
 # BR2_PACKAGE_LUA is not set
 BR2_PACKAGE_PROVIDES_HOST_LUAINTERPRETER="host-lua"
 BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
@@ -1716,7 +1716,7 @@ BR2_PACKAGE_SQLITE=y
 # BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
-# BR2_PACKAGE_LIBLOCKFILE is not set
+BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_LIBNFS is not set
 BR2_PACKAGE_LIBSYSFS=y
 # BR2_PACKAGE_LOCKDEV is not set
@@ -2716,10 +2716,11 @@ BR2_PACKAGE_PPPD_OVERWRITE_RESOLV_CONF=y
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WAVEMON is not set
 BR2_PACKAGE_WGET=y
-# BR2_PACKAGE_WHOIS is not set
+BR2_PACKAGE_WHOIS=y
 # BR2_PACKAGE_WIREGUARD_TOOLS is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
-# BR2_PACKAGE_WIRELESS_TOOLS is not set
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
@@ -2840,7 +2841,7 @@ BR2_PACKAGE_FILE=y
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_GNUPG2 is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
-# BR2_PACKAGE_LOCKFILE_PROGS is not set
+BR2_PACKAGE_LOCKFILE_PROGS=y
 # BR2_PACKAGE_LOGROTATE is not set
 # BR2_PACKAGE_LOGSURFER is not set
 # BR2_PACKAGE_PDMENU is not set
