--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-gc087650-dirty Configuration
+# Buildroot 2020.02.3-g8c20a48-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -1133,11 +1133,11 @@ BR2_PACKAGE_HAS_UDEV=y
 # BR2_PACKAGE_UHUBCTL is not set
 # BR2_PACKAGE_UMTPRD is not set
 # BR2_PACKAGE_UPOWER is not set
-# BR2_PACKAGE_USB_MODESWITCH is not set
-# BR2_PACKAGE_USB_MODESWITCH_DATA is not set
+BR2_PACKAGE_USB_MODESWITCH=y
+BR2_PACKAGE_USB_MODESWITCH_DATA=y
 # BR2_PACKAGE_USBMOUNT is not set
 BR2_PACKAGE_USBUTILS=y
-BR2_PACKAGE_W_SCAN=y
+# BR2_PACKAGE_W_SCAN is not set
 # BR2_PACKAGE_WIPE is not set
 # BR2_PACKAGE_XORRISO is not set
 
@@ -1159,7 +1159,7 @@ BR2_PACKAGE_GAUCHE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GAUCHE is not set
 # BR2_PACKAGE_GUILE is not set
 # BR2_PACKAGE_HASERL is not set
-# BR2_PACKAGE_JIMTCL is not set
+BR2_PACKAGE_JIMTCL=y
 # BR2_PACKAGE_LUA is not set
 BR2_PACKAGE_PROVIDES_HOST_LUAINTERPRETER="host-lua"
 BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
@@ -2269,7 +2269,7 @@ BR2_PACKAGE_BOOST_THREAD=y
 BR2_PACKAGE_EIGEN=y
 # BR2_PACKAGE_EIGEN_UNSUPPORTED_MODULES is not set
 # BR2_PACKAGE_ELFUTILS is not set
-# BR2_PACKAGE_ELL is not set
+BR2_PACKAGE_ELL=y
 # BR2_PACKAGE_FFTW is not set
 # BR2_PACKAGE_FLANN is not set
 # BR2_PACKAGE_FLATBUFFERS is not set
@@ -2564,7 +2564,7 @@ BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # BR2_PACKAGE_IPUTILS is not set
 # BR2_PACKAGE_IRSSI is not set
 BR2_PACKAGE_IW=y
-# BR2_PACKAGE_IWD is not set
+BR2_PACKAGE_IWD=y
 # BR2_PACKAGE_JANUS_GATEWAY is not set
 # BR2_PACKAGE_KEEPALIVED is not set
 # BR2_PACKAGE_KISMET is not set
