--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-g8c20a48-dirty Configuration
+# Buildroot 2020.02.3-g8e11c58-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2030,7 +2030,8 @@ BR2_PACKAGE_LIBFASTJSON=y
 #
 # Logging
 #
-BR2_PACKAGE_GLOG=y
+# BR2_PACKAGE_GLOG is not set
+BR2_PACKAGE_GLOG_NEW=y
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
 BR2_PACKAGE_LIBLOGGING=y
 # BR2_PACKAGE_LOG4CPLUS is not set
@@ -2275,7 +2276,7 @@ BR2_PACKAGE_EIGEN=y
 # BR2_PACKAGE_FLATBUFFERS is not set
 # BR2_PACKAGE_FLATCC is not set
 # BR2_PACKAGE_GCONF is not set
-# BR2_PACKAGE_GFLAGS is not set
+BR2_PACKAGE_GFLAGS=y
 # BR2_PACKAGE_GLI is not set
 # BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GLM is not set
