--- a/package/Config.in
+++ b/package/Config.in
@@ -1563,6 +1563,7 @@ endmenu
 
 menu "Logging"
 	source "package/glog/Config.in"
+	source "package/glog.git/Config.in"
 	source "package/liblog4c-localtime/Config.in"
 	source "package/liblogging/Config.in"
 	source "package/log4cplus/Config.in"
