--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-g8e11c58-dirty Configuration
+# Buildroot 2020.02.3-gbbca62c-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -440,10 +440,10 @@ BR2_GENERATE_LOCALE=""
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY=""
-BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/post_patch/post-build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
 BR2_ROOTFS_POST_IMAGE_SCRIPT=""
-BR2_ROOTFS_POST_SCRIPT_ARGS="-p ${TOPDIR}"
+BR2_ROOTFS_POST_SCRIPT_ARGS="-p ${TOPDIR}/post_patch"
 
 #
 # Kernel
@@ -1372,12 +1372,14 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 BR2_PACKAGE_PYTHON_NUMPY=y
 # BR2_PACKAGE_PYTHON_OAUTHLIB is not set
 # BR2_PACKAGE_PYTHON_PAHO_MQTT is not set
+# BR2_PACKAGE_PYTHON_PANDAS is not set
 # BR2_PACKAGE_PYTHON_PARAMIKO is not set
 # BR2_PACKAGE_PYTHON_PARSO is not set
 # BR2_PACKAGE_PYTHON_PASSLIB is not set
 # BR2_PACKAGE_PYTHON_PATHPY is not set
 # BR2_PACKAGE_PYTHON_PATHTOOLS is not set
 # BR2_PACKAGE_PYTHON_PATHVALIDATE is not set
+# BR2_PACKAGE_PYTHON_PEEWEE is not set
 # BR2_PACKAGE_PYTHON_PERIPHERY is not set
 # BR2_PACKAGE_PYTHON_PEXPECT is not set
 # BR2_PACKAGE_PYTHON_PICKLESHARE is not set
