glog 可以进行新旧版本兼容

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-gbbca62c-dirty Configuration
+# Buildroot 2020.02.3-gaecf20e-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2032,8 +2032,9 @@ BR2_PACKAGE_LIBFASTJSON=y
 #
 # Logging
 #
-# BR2_PACKAGE_GLOG is not set
-BR2_PACKAGE_GLOG_NEW=y
+BR2_PACKAGE_GLOG=y
+# USING_GLOG_OLD is not set
+USING_GLOG_NEW=y
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
 BR2_PACKAGE_LIBLOGGING=y
 # BR2_PACKAGE_LOG4CPLUS is not set
