--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-ged416c5-dirty Configuration
+# Buildroot 2020.02.3-ga293a77 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -45,7 +45,7 @@ BR2_ARCH_HAS_TOOLCHAIN_BUILDROOT=y
 BR2_ARCH="arm"
 BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_ABI="aapcs-linux"
-BR2_GCC_TARGET_CPU="cortex-a7"
+BR2_GCC_TARGET_CPU="cortex-a53"
 BR2_GCC_TARGET_FPU="vfpv4-d16"
 BR2_GCC_TARGET_FLOAT_ABI="hard"
 BR2_GCC_TARGET_MODE="arm"
@@ -57,9 +57,10 @@ BR2_ARM_CPU_HAS_FPU=y
 BR2_ARM_CPU_HAS_VFPV2=y
 BR2_ARM_CPU_HAS_VFPV3=y
 BR2_ARM_CPU_HAS_VFPV4=y
+BR2_ARM_CPU_HAS_FP_ARMV8=y
 BR2_ARM_CPU_HAS_ARM=y
 BR2_ARM_CPU_HAS_THUMB2=y
-BR2_ARM_CPU_ARMV7A=y
+BR2_ARM_CPU_ARMV8A=y
 
 #
 # armv4 cores
@@ -89,7 +90,7 @@ BR2_ARM_CPU_ARMV7A=y
 # armv7a cores
 #
 # BR2_cortex_a5 is not set
-BR2_cortex_a7=y
+# BR2_cortex_a7 is not set
 # BR2_cortex_a8 is not set
 # BR2_cortex_a9 is not set
 # BR2_cortex_a12 is not set
@@ -111,7 +112,7 @@ BR2_cortex_a7=y
 #
 # BR2_cortex_a32 is not set
 # BR2_cortex_a35 is not set
-# BR2_cortex_a53 is not set
+BR2_cortex_a53=y
 # BR2_cortex_a57 is not set
 # BR2_cortex_a57_a53 is not set
 # BR2_cortex_a72 is not set
@@ -145,6 +146,8 @@ BR2_ARM_EABIHF=y
 BR2_ARM_FPU_VFPV4D16=y
 # BR2_ARM_FPU_NEON is not set
 # BR2_ARM_FPU_NEON_VFPV4 is not set
+# BR2_ARM_FPU_FP_ARMV8 is not set
+# BR2_ARM_FPU_NEON_FP_ARMV8 is not set
 BR2_ARM_INSTRUCTIONS_ARM=y
 # BR2_ARM_INSTRUCTIONS_THUMB2 is not set
 
@@ -590,8 +593,6 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 #
 # ktap needs a Linux kernel to be built
 #
-BR2_PACKAGE_KVM_UNIT_TESTS_ARCH_SUPPORTS=y
-# BR2_PACKAGE_KVM_UNIT_TESTS is not set
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
@@ -634,8 +635,6 @@ BR2_PACKAGE_TCF_AGENT_ARCH_SUPPORTS=y
 BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TRINITY is not set
 # BR2_PACKAGE_UCLIBC_NG_TEST is not set
-BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
-# BR2_PACKAGE_VALGRIND is not set
 # BR2_PACKAGE_VMTOUCH is not set
 # BR2_PACKAGE_WHETSTONE is not set
 
@@ -2107,9 +2106,6 @@ BR2_PACKAGE_LLVM_TARGET_ARCH="ARM"
 # BR2_PACKAGE_MPIR is not set
 # BR2_PACKAGE_MSGPACK is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
-BR2_PACKAGE_OPENBLAS_DEFAULT_TARGET="ARMV7"
-BR2_PACKAGE_OPENBLAS_ARCH_SUPPORTS=y
-# BR2_PACKAGE_OPENBLAS is not set
 # BR2_PACKAGE_ORC is not set
 # BR2_PACKAGE_P11_KIT is not set
 # BR2_PACKAGE_POCO is not set
@@ -2770,7 +2766,6 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_WRITE is not set
 # BR2_PACKAGE_UTIL_LINUX_ZRAMCTL is not set
 # BR2_PACKAGE_XDG_DBUS_PROXY is not set
-# BR2_PACKAGE_XEN is not set
 BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 # BR2_PACKAGE_XVISOR is not set
 
@@ -2902,7 +2897,7 @@ BR2_PACKAGE_HOST_QEMU_USER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_HOST_RCW is not set
 BR2_PACKAGE_HOST_RUSTC_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS=y
-BR2_PACKAGE_HOST_RUSTC_ARCH="armv7"
+BR2_PACKAGE_HOST_RUSTC_ARCH="arm"
 BR2_PACKAGE_HOST_RUSTC_ABI="eabihf"
 # BR2_PACKAGE_HOST_RUSTC is not set
 BR2_PACKAGE_PROVIDES_HOST_RUSTC="host-rust-bin"
