--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02.3-ged416c5-dirty Configuration
+# Buildroot 2020.02.3-ged23332-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -292,13 +292,7 @@ BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
 #
 # Host GDB Options
 #
-BR2_PACKAGE_HOST_GDB=y
-BR2_PACKAGE_HOST_GDB_TUI=y
-BR2_PACKAGE_HOST_GDB_PYTHON=y
-BR2_PACKAGE_HOST_GDB_SIM=y
-# BR2_GDB_VERSION_8_1 is not set
-BR2_GDB_VERSION_8_2=y
-# BR2_GDB_VERSION_8_3 is not set
+# BR2_PACKAGE_HOST_GDB is not set
 BR2_GDB_VERSION="8.2.1"
 
 #
@@ -2643,7 +2637,7 @@ BR2_PACKAGE_EFIVAR_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_FTOP is not set
 # BR2_PACKAGE_GETENT is not set
-BR2_PACKAGE_HTOP=y
+# BR2_PACKAGE_HTOP is not set
 BR2_PACKAGE_INITSCRIPTS=y
 
 #
